@@ -379,30 +379,23 @@ END SUBROUTINE latgen
 SUBROUTINE at2celldm (ibrav,alat,a1,a2,a3,celldm)
   !-----------------------------------------------------------------------
   !
-  !     Returns celldm parameters from lattice vectors
-  !     Tries to guess ibrav if not specified (ibrav=0)
-  !     See latgen for definition of celldm and lattice vectors
+  !     Returns celldm parameters computed from lattice vectors a1,a2,a3 
+  !     a1, a2, a3 are in "alat" units
+  !     If Bravais lattice index ibrav=0, only celldm(1) is set to alat
+  !     See latgen for definition of celldm and lattice vectors.
+  !     a1, a2, a3, ibrav, alat are not modified
   !
   USE kinds, ONLY: DP
   IMPLICIT NONE
   INTEGER, INTENT(in) :: ibrav
-  real(DP), INTENT(in) :: alat, a1(3), a2(3), a3(3)
-  real(DP), INTENT(out) :: celldm(6)
-  INTEGER :: jbrav
-  INTEGER, EXTERNAL :: at2ibrav
+  REAL(DP), INTENT(in) :: alat, a1(3), a2(3), a3(3)
+  REAL(DP), INTENT(out) :: celldm(6)
   !
   celldm = 0.d0
-  jbrav = 0
   !
-  IF ( ibrav == 0 ) THEN
-     jbrav= at2ibrav (a1, a2, a3)
-     IF ( jbrav == 0 ) CALL infomsg('at2celldm', &
-          'could not determine ibrav for lattice vectors')
-  ELSE
-     jbrav = ibrav
-  ENDIF
-
-  SELECT CASE  ( jbrav )
+  SELECT CASE  ( ibrav )
+  CASE (0)
+     celldm(1) = 1.0_dp
   CASE (1)
      celldm(1) = sqrt( dot_product (a1,a1) )
   CASE (2)
@@ -446,7 +439,7 @@ SUBROUTINE at2celldm (ibrav,alat,a1,a2,a3,celldm)
      celldm(1) = sqrt( dot_product (a1,a1) )
      celldm(2) = sqrt( dot_product(a2(:),a2(:)) ) / celldm(1)
      celldm(3) = sqrt( dot_product(a3(:),a3(:)) ) / celldm(1)
-     IF ( jbrav == 12 ) THEN
+     IF ( ibrav == 12 ) THEN
         celldm(4) = dot_product(a1(:),a2(:)) / celldm(1) / &
              sqrt(dot_product(a2(:),a2(:)))
      ELSE
@@ -468,7 +461,7 @@ SUBROUTINE at2celldm (ibrav,alat,a1,a2,a3,celldm)
      celldm(5) = a3(1)/a1(1)/celldm(3)/2.0_dp
      !celldm(5) = DOT_PRODUCT(a1(:),a3(:)) / &
      !     SQRT(DOT_PRODUCT(a1(:),a1(:)) * DOT_PRODUCT(a3(:),a3(:)))
-  CASE (0,14)
+  CASE (14)
      celldm(1) = sqrt(dot_product(a1(:),a1(:)))
      celldm(2) = sqrt( dot_product(a2(:),a2(:))) / celldm(1)
      celldm(3) = sqrt( dot_product(a3(:),a3(:))) / celldm(1)
@@ -482,7 +475,7 @@ SUBROUTINE at2celldm (ibrav,alat,a1,a2,a3,celldm)
      CALL infomsg('at2celldm', 'wrong ibrav?')
   END SELECT
   !
-  IF ( alat > 0.0_dp) celldm(1) = celldm(1)*alat
+  celldm(1) = celldm(1) * alat
   !
 END SUBROUTINE at2celldm
 !
@@ -728,3 +721,4 @@ SUBROUTINE celldm2abc ( ibrav, celldm, a,b,c,cosab,cosac,cosbc )
   ENDIF
   !
 END SUBROUTINE celldm2abc
+
